--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <title>Document</title>
  </head>
  <body>
-    <h1>Angela Yu's Portfolio</h1>
+    <h1>Siva Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr/>
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
