--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: 9363167668</p>
+<p>Email: sivaprasathsivaprasath123@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  192/A,athimarathuvalasu<br />
+  rajampatti(po)  <br />
+  palani(Tk)<br />
 </p>
